samples/_failures_safe/1761484789_9ec55a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9d847746.c: In function ‘main’:
./samples/SAFE/__tmp_9d847746.c:158:17: error: expected expression at end of input
  158 |                 if (target_level == -
      |                 ^~
./samples/SAFE/__tmp_9d847746.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d847746.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d847746.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9d847746.c:158:17: error: expected declaration or statement at end of input
